<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_neighbour_information"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.openclassrooms.entrevoisins.ui.neighbour_list.NeighbourInformationActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar.Bridge"
        tools:context="com.openclassrooms.entrevoisins.ui.neighbour_list.NeighbourInformationActivity">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="30dp"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapseLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.MaterialComponents.Light.DarkActionBar"
                    />

                <ImageView
                    android:id="@+id/neighbour_information_imageview_avatar_image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image_avatar"
                    app:layout_collapseMode="parallax"

                />

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                    android:contentDescription="@string/back_button" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>




        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/neighbour_information_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/favorite_button"
            app:backgroundTint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@id/appbar"
            app:layout_constraintEnd_toEndOf="@id/appbar"
            app:layout_constraintTop_toTopOf="@id/appbar"
            app:srcCompat="@drawable/ic_baseline_star_border_24" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="6dp">

                <TextView
                    android:id="@+id/neighbour_information_textview_avatar_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Caroline"/>


                <ImageView
                    android:id="@+id/neighbour_information_imageview_avatar_phone_number_sym"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:contentDescription="@string/phone_number_sym"
                    app:layout_constraintTop_toBottomOf="@+id/neighbour_information_textview_avatar_name_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_baseline_local_phone_24" />

                <TextView
                    android:id="@+id/neighbour_information_textview_avatar_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/neighbour_information_textview_avatar_name_title"
                    app:layout_constraintStart_toEndOf="@+id/neighbour_information_imageview_avatar_phone_number_sym"
                    android:textColor="@color/colorBlack" />

                <ImageView
                    android:id="@+id/neighbour_information_imageview_avatar_address_sym"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:contentDescription="@string/localization_sym"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/neighbour_information_imageview_avatar_phone_number_sym"
                    app:srcCompat="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:id="@+id/neighbour_information_textview_avatar_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/neighbour_information_textview_avatar_phone_number"
                    app:layout_constraintStart_toEndOf="@+id/neighbour_information_imageview_avatar_address_sym"
                    android:textColor="@color/colorBlack" />

                <ImageView
                    android:id="@+id/neighbour_information_imageview_avatar_url_sym"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/avatar_url_sym"
                    android:padding="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/neighbour_information_imageview_avatar_address_sym"
                    app:srcCompat="@drawable/ic_baseline_language_24" />

                <TextView
                    android:id="@+id/neighbour_information_textview_avatar_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/neighbour_information_textview_avatar_address"
                    app:layout_constraintStart_toEndOf="@+id/neighbour_information_imageview_avatar_url_sym"
                    android:textColor="@color/colorBlack" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="6dp">


                <TextView
                    android:id="@+id/neighbour_information_textview_avatar_about_me_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/About_me"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/neighbour_information_textview_avatar_about_me"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/neighbour_information_textview_avatar_about_me_title"
                    app:layout_constraintTop_toBottomOf="@id/neighbour_information_textview_avatar_about_me_title"
                    android:textColor="@color/colorBlack" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>




